# learn

./: .gitignore  CMakeLists.txt  Makefile  chat  chat.c  config.yml  gmon.out  peers.yml  rpc_remake_demos.cc  save.txt  time.cc
Gossip/: CMakeLists.txt  gossip.cc  gossip.hh  main.cc  peer.cc  peer.hh  ss.hh
gossip/: gossip.cc  gossip.hh
peer1/: payload.yml
peer2/: payload.yml
peer3/: payload.yml
