cmake_minimum_required(VERSION 3.22)
project(star)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_FLAGS_DEBUG "-O1 -pg -g -fno-omit-frame-pointer -mno-omit-le    af-frame-pointer")
set(CMAKE_CXX_FLAGS_DEBUG "-O1 -pg -g -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer")
include_directories(Gossip)
find_package (Seastar REQUIRED) 
find_package (Valgrind REQUIRED)
add_subdirectory(Gossip)
add_executable (star Gossip/main.cc Gossip/peer.cc Gossip/gossip.cc )
target_link_libraries (star Seastar::seastar)
